--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
 <body>
 <h1> important stuff goes here </h1>
 <h2> this isn't as important </h2>
+<h6> if you can't read this get glasses </h6>
     <p> wow much to say, much to do, what to say what to do </p>
     <p> do it all over again and see how this works </p>
+        <hr>
+        <ul>
+            <li> pillows </li>
+            <li> blankets </li>
+            <li> fluffy socks </li>
+         </ul>
+         <ol>
+            <li> cocoa </li>
+            <li> marshmallows </li>
+            <li> candy canes </li>
+         </ol>
+<h5>here's a <a href="https://docs.google.com/document/d/1UMCAQUd-SJkP8cbXdJuO76OG7xAF2uChZ-6f3da05bI/edit">link to words to know</a>.</h5>
     
 </body>
 
