updating website files

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <title> bro i'm coding </title>
+        <link rel="stylesheet" href="style.css">
+
     </head>
 <body>
 <h1> important stuff goes here </h1>
 <h2> this isn't as important </h2>
 <h6> if you can't read this get glasses </h6>
     <p> wow much to say, much to do, what to say what to do </p>
-    <p> do it all over again and see how this works </p>
+    <p class="red" id="highlight"> do it all over again and see how this works </p>
         <hr>
         <ul>
             <li> pillows </li>
@@ -20,8 +22,27 @@
             <li> marshmallows </li>
             <li> candy canes </li>
          </ol>
-<h5>here's a <a href="https://docs.google.com/document/d/1UMCAQUd-SJkP8cbXdJuO76OG7xAF2uChZ-6f3da05bI/edit">link to words to know</a>.</h5>
+<h5>here's a <a href="https://docs.google.com/document/d/1UMCAQUd-SJkP8cbXdJuO76OG7xAF2uChZ-6f3da05bI/edit">link to wosrds to know</a>.</h5>
     
+<hr>
+
+<!--slay comment --> 
+<img src="images/AUTUMN-0282.jpeg" alt="Ailey dancer grad photos Fordham University" width="161px">
+<img src="images/AUTUMN-0148.jpeg" alt="Ailey dancer grad photos Fordham University" width="400px">
+<br>
+<img src="images/CHANELLE-0568.jpeg" alt="bethesda fountain grad photos Fordham University" width="161px">
+
+
+<p> some text to show the <u>difference</u> btwn <b>inline/block</b> </p> 
+
+
+
+
+
+
+
+
+
 </body>
 
         </html>
