--- a/exercise_1.5/index.html
+++ b/exercise_1.5/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     </head>
+<header>
+ashley's page + <a href="https://ashyiuley.github.io/coding-fr/Project_4/"> project 4</a> because i refuse to have it stand alone
+
+</header>
+
     <style>
         .grid-container {
           display: grid;
@@ -34,14 +39,13 @@
             
             <div class="div6"> project 3<a class="btn6" href="https://ashyiuley.github.io/coding-fr/Project_3/"></a></div>
 
-            <div class="div7"> journal 2<a class="btn7" href="https://ashyiuley.github.io/coding-fr/Journal_2/"></a> </div>
+            <div class="div7"> journal 3<a class="btn7" href="https://ashyiuley.github.io/coding-fr/Journal_3/"></a> </div>
 
 
            
-            <div class="div8"> journal 1<a class="btn8" href="https://ashyiuley.github.io/coding-fr/Journal_1/"></a></div>
-            <div class="div9"> <div id="title"><i>Ashley Yiu</i>
+            <div class="div8"> journal 2<a class="btn8" href="https://ashyiuley.github.io/coding-fr/Journal_2/"></a></div>
 
-            </div></div>
+            <div class="div9"> journal 1 <a class="btn9" href="https://ashyiuley.github.io/coding-fr/Journal_1/"></a></div>
             <div class="div10"> </div>
             <div class="div11"> </div>
             <div class="div12"> </div>
